--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 logging.level.org.springframework.security=DEBUG
+# Maximum file size
+spring.servlet.multipart.max-file-size=10MB
+# Maximum request size
+spring.servlet.multipart.max-request-size=10MB
